Fix broken inverted buttons

--- a/docs/assets/css/dialtone--syntax.css
+++ b/docs/assets/css/dialtone--syntax.css
@@ -10,10 +10,8 @@ pre[class*="language-"] {
   margin: 0;
   border-radius: 0.7rem;
   background: none;
-  color: #292C33;
   color: var(--slate-light);
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: 1.2rem;
   font-size: var(--text-size--xs);
   line-height: 1.66666667;
   text-align: left;
@@ -49,7 +47,6 @@ pre[class*="language-"] {
 }
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #F1F2F4;
   background: var(--ash);
 }
 /* Inline code */
@@ -64,7 +61,6 @@ pre[class*="language-"] {
   color: slategray;
 }
 .token.punctuation {
-  color: #6C6E75;
   color: var(--slate-lightest);
 }
 .token.namespace {
@@ -134,7 +130,6 @@ pre[class*="language-"].line-numbers > code {
   top: 0;
   left: -3.8em;
   width: 3em;
-  border-right: 1px solid #6C6E75;
   border-right: 1px solid var(--slate-lightest);
   font-size: 100%;
   /* works for line-numbers below 1000 lines */
@@ -153,7 +148,6 @@ pre[class*="language-"].line-numbers > code {
   content: counter(linenumber);
   display: block;
   padding-right: 0.8em;
-  color: #6C6E75;
   color: var(--slate-lightest);
   text-align: right;
 }
@@ -161,7 +155,6 @@ pre[class*="language-"].line-numbers > code {
   display: block;
   float: left;
   margin-right: 1em;
-  border-right: 1px solid #6C6E75;
   border-right: 1px solid var(--slate-lightest);
   font-size: 100%;
   letter-spacing: -1px;
@@ -175,7 +168,6 @@ pre[class*="language-"].line-numbers > code {
   content: ' ';
   display: block;
   padding-right: 0.8em;
-  color: #6C6E75;
   color: var(--slate-lightest);
 }
 .command-line-prompt > span[data-user]:before {
